Fix more easy deprecation warnings: String constructors of boxed types.